force-app/main/default/objects/Meeting__c/fields/Attendees_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Count__c</fullName>
    <label>Attendees Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>