force-app/main/default/objects/Meeting__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Productive</fullName>
            </value>
            <value>
                <fullName>Productive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Needs Follow-up</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>