force-app/main/default/objects/Meeting__c/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>