force-app/main/default/objects/Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Visit</fullName>
                <default>true</default>
                <label>In-Person Visit</label>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>