force-app/main/default/objects/Meeting__c/fields/Product_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Product_Discussed__c</fullName>
    <label>Product Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>