force-app/main/default/objects/Meeting__c/fields/Signature_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Signature_Obtained__c</fullName>
    <label>Signature Obtained</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>